<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".AcercaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvParrafo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/adamina"
                android:text="@string/acerca1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvParrafo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/adamina"
                android:text="@string/acerca2"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvParrafo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/adamina"
                android:text="@string/acerca3"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvContacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:autoLink="email"
                android:fontFamily="@font/adamina"
                android:text="@string/mail"
                android:textAlignment="center"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvFinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/adamina"
                android:text="@string/gracias"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/volver"
                android:backgroundTint="@color/colorPrimaryDark"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>