<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".TiposActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/adamina"
                android:text="@string/practica"
                android:textAlignment="center"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tvZonaRapida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/adamina"
                android:text="@string/Zona_A"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnRapido1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="TEST RÁPIDO 1"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btnRapido2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="TEST RÁPIDO 2"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btnRapido3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="TEST RÁPIDO 3"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvZonaExamen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/adamina"
                android:text="@string/Zona_B"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnExamen1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="TEST EXÁMEN 1"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btnExamen2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="TEST EXÁMEN 2"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btnVuelve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/volver"/>

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/adamina"
                android:text="@string/conectado"
                android:textColor="@color/VERDE"/>

            <TextView
                android:id="@+id/tvMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/adamina"
                android:textColor="@color/VERDE"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>